--- a/.github/workflows/excavator.yml
+++ b/.github/workflows/excavator.yml
@@ -2,8 +2,8 @@ on:
   repository_dispatch:
   workflow_dispatch:
   schedule:
-    # run every 4 hours
-    - cron: '0 */4 * * *'
+    # run every hour
+    - cron: '0 * * * *'
 name: Excavator
 jobs:
   excavate:
